--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:       Grim Hollow
 email:       etharis+dnd@cle.ar.it
-description: Test test test
+description: Von Abenteurern in dunklen Zeiten
 baseurl:     "" # the subpath of your site, e.g. /blog
 url:         "https://etharis.dndaux.de" # the base hostname & protocol for your site, e.g. http://example.comemail:              your-email@example.com
 author:      m_sc
